#116 fix banner z-index bug for the galleries

--- a/wp/wp-content/themes/lahma_maker/style.css
+++ b/wp/wp-content/themes/lahma_maker/style.css
@@ -159,6 +159,7 @@ header .wrap .site-branding {
   background: rgba(255, 255, 255, 0.9);
   width: 100%;
   box-shadow: 0px 0px 5px 0px black;
+  z-index: 1000;
 }
 
 #donatebanner #donateholder {
